--- a/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
+++ b/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,7 @@
    "source": [
     "def take_photo(filename): \n",
     "    cap = cv2.VideoCapture(2)\n",
+    "    cap.set(cv2.CAP_PROP_AUTOFOCUS, 0)\n",
     "    ret, frame = cap.read()\n",
     "    plt.imshow(cv2.cvtColor(frame,cv2.COLOR_BGR2RGB))\n",
     "    key = cv2.waitKey(1)\n",
@@ -72,13 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def takeVideo():\n",
     "    # Connect to webcam\n",
     "    cap = cv2.VideoCapture(2)\n",
+    "    cap.set(cv2.CAP_PROP_AUTOFOCUS, 0)\n",
     "    # Loop through every frame until we close our webcam\n",
     "    while cap.isOpened(): \n",
     "        ret, frame = cap.read()\n",
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +123,7 @@
    "source": [
     "def get_edges(): \n",
     "    cap = cv2.VideoCapture(2)\n",
-    "    \n",
+    "    cap.set(cv2.CAP_PROP_AUTOFOCUS, 0)\n",
     "    while cap.isOpened(): \n",
     "        ret, frame = cap.read()\n",
     "        gray = cv2.cvtColor(frame,cv2.COLOR_BGR2GRAY)\n",
