three working methods for image, video, and edge capture

--- a/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
+++ b/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,11 +143,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "get_edges()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap = cv2.VideoCapture(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "640.0\n",
+      "480.0\n",
+      "30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(videocapture.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "print(videocapture.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "print(videocapture.get(cv2.CAP_PROP_FPS))"
    ]
   }
  ],
