added frame height/width/rate printout method

--- a/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
+++ b/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
@@ -152,15 +152,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cap = cv2.VideoCapture(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -175,9 +166,21 @@
     }
    ],
    "source": [
-    "print(videocapture.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
-    "print(videocapture.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
-    "print(videocapture.get(cv2.CAP_PROP_FPS))"
+    "def get_frame_data(cap):\n",
+    "    print(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "    print(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "    print(cap.get(cv2.CAP_PROP_FPS))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap = cv2.VideoCapture(2)\n",
+    "get_frame_data(cap)\n",
+    "cap.release()"
    ]
   }
  ],
