added methods to save camera intrinsics

--- a/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
+++ b/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
@@ -399,36 +399,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt(\"lifecam_mtx.csv\",mtx,delimiter = \",\")\n",
-    "np.savetxt('lifecam_dst_shape.csv',np.array(dst.shape),delimiter= \",\",fmt='%d')\n",
-    "np.savetxt(\"lifecam_dst.csv\",dst.reshape(-1, dst.shape[-1]),delimiter = \",\")\n"
+    "#how to save camera intrinsics to file:\n",
+    "def save_intrinsics(mtx, dst, fileprefix = \"\"):\n",
+    "    np.savetxt(\"{0}mtx.csv\".format(fileprefix),mtx,delimiter = \",\")\n",
+    "    np.savetxt('{0}dst_shape.csv'.format(fileprefix),np.array(dst.shape),delimiter= \",\",fmt='%d')\n",
+    "    np.savetxt(\"{0}dst.csv\".format(fileprefix),dst.reshape(-1, dst.shape[-1]),delimiter = \",\")\n",
+    "\n",
+    "save_intrinsics(mtx,dst,fileprefix = \"lifecam_\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 193,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'p' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[191], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m mtx \u001b[39m=\u001b[39m  p\u001b[39m.\u001b[39mgenfromtxt(\u001b[39m\"\u001b[39m\u001b[39mlifecam_mtx.csv\u001b[39m\u001b[39m\"\u001b[39m,delimiter \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m dst_shape \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mgenfromtxt(\u001b[39m\"\u001b[39m\u001b[39mlifecam_dst_shape.csv\u001b[39m\u001b[39m\"\u001b[39m,delimiter \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m,dtype\u001b[39m=\u001b[39m\u001b[39mint\u001b[39m)\n\u001b[1;32m      3\u001b[0m dst \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mgenfromtxt(\u001b[39m\"\u001b[39m\u001b[39mlifecam_dst.csv\u001b[39m\u001b[39m\"\u001b[39m,delimiter \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mreshape(dst_shape)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'p' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mtx =  np.genfromtxt(\"lifecam_mtx.csv\",delimiter = \",\")\n",
-    "dst_shape = np.genfromtxt(\"lifecam_dst_shape.csv\",delimiter = \",\",dtype=int)\n",
-    "dst = np.genfromtxt(\"lifecam_dst.csv\",delimiter = \",\").reshape(dst_shape)"
+    "#how to load camera intrinsics from a file:\n",
+    "def load_intrinsics(mtx_file,dst_file,shape_file):\n",
+    "    mtx =  np.genfromtxt(\"lifecam_mtx.csv\",delimiter = \",\")\n",
+    "    dst_shape = np.genfromtxt(\"lifecam_dst_shape.csv\",delimiter = \",\",dtype=int)\n",
+    "    dst = np.genfromtxt(\"lifecam_dst.csv\",delimiter = \",\").reshape(dst_shape)\n",
+    "    return mtx, dst\n",
+    "\n",
+    "mtx, dst = load_intrinsics(\"lifecam_mtx.csv\",\"lifecam_dst.csv\",\"lifecam_dst_shape.csv\")"
    ]
   }
  ],
