changed dst --> undst (undistorted image) and dst files --> dist (store focal distance intrinsics)

--- a/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
+++ b/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
@@ -366,35 +366,15 @@
     "np.savetxt(\"lifecam_dist.csv\",dist,delimiter = \",\")\n",
     "\n",
     "# undistort\n",
-    "dst = cv.undistort(img, mtx, dist, None, newcameramtx)\n",
-    "# plt.imshow(dst)\n",
+    "undst = cv.undistort(img, mtx, dist, None, newcameramtx)\n",
+    "# plt.imshow(undst)\n",
     "# crop the image\n",
     "x, y, w, h = roi\n",
-    "dst = dst[y:y+h, x:x+w]\n",
-    "# plt.imshow(dst)\n",
-    "cv.imwrite('/home/sage/Pictures/{0}/calibresult.jpg'.format(dir), dst)\n",
+    "undst = undst[y:y+h, x:x+w]\n",
+    "# plt.imshow(undst)\n",
+    "cv.imwrite('/home/sage/Pictures/{0}/calibresult.jpg'.format(dir), undst)\n",
     "crop_orig = img[y:y+h, x:x+w]\n",
     "cv.imwrite('/home/sage/Pictures/{0}/test_cropped.jpg'.format(dir),crop_orig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([477, 636,   3])"
-      ]
-     },
-     "execution_count": 185,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array(dst.shape)"
    ]
   },
   {
@@ -404,12 +384,12 @@
    "outputs": [],
    "source": [
     "#how to save camera intrinsics to file:\n",
-    "def save_intrinsics(mtx, dst, fileprefix = \"\"):\n",
+    "def save_intrinsics(mtx, dist, fileprefix = \"\"):\n",
     "    np.savetxt(\"{0}mtx.csv\".format(fileprefix),mtx,delimiter = \",\")\n",
-    "    np.savetxt('{0}dst_shape.csv'.format(fileprefix),np.array(dst.shape),delimiter= \",\",fmt='%d')\n",
-    "    np.savetxt(\"{0}dst.csv\".format(fileprefix),dst.reshape(-1, dst.shape[-1]),delimiter = \",\")\n",
+    "    np.savetxt('{0}dist_shape.csv'.format(fileprefix),np.array(dist.shape),delimiter= \",\",fmt='%d')\n",
+    "    np.savetxt(\"{0}dist.csv\".format(fileprefix),dist.reshape(-1, dist.shape[-1]),delimiter = \",\")\n",
     "\n",
-    "save_intrinsics(mtx,dst,fileprefix = \"lifecam_\")\n"
+    "save_intrinsics(mtx,dist,fileprefix = \"lifecam_\")\n"
    ]
   },
   {
@@ -419,13 +399,13 @@
    "outputs": [],
    "source": [
     "#how to load camera intrinsics from a file:\n",
-    "def load_intrinsics(mtx_file,dst_file,shape_file):\n",
+    "def load_intrinsics(mtx_file,dist_file,shape_file):\n",
     "    mtx =  np.genfromtxt(\"lifecam_mtx.csv\",delimiter = \",\")\n",
-    "    dst_shape = np.genfromtxt(\"lifecam_dst_shape.csv\",delimiter = \",\",dtype=int)\n",
-    "    dst = np.genfromtxt(\"lifecam_dst.csv\",delimiter = \",\").reshape(dst_shape)\n",
-    "    return mtx, dst\n",
+    "    dist_shape = np.genfromtxt(\"lifecam_dist_shape.csv\",delimiter = \",\",dtype=int)\n",
+    "    dist = np.genfromtxt(\"lifecam_dist.csv\",delimiter = \",\").reshape(dist_shape)\n",
+    "    return mtx, dist\n",
     "\n",
-    "mtx, dst = load_intrinsics(\"lifecam_mtx.csv\",\"lifecam_dst.csv\",\"lifecam_dst_shape.csv\")"
+    "mtx, dist = load_intrinsics(\"lifecam_mtx.csv\",\"lifecam_dist.csv\",\"lifecam_dist_shape.csv\")"
    ]
   }
  ],
