fixed focal distance formatting error - really a 1x5, not a huge 3D array (got mixed up with image data)

--- a/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
+++ b/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -330,17 +330,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create calibration parameters:\n",
-    "ret, mtx, dist, rvecs, tvecs = cv.calibrateCamera(objpoints, imgpoints, gray.shape[::-1], None, None)"
+    "#how to save camera intrinsics to file:\n",
+    "def save_intrinsics(mtx, dist, fileprefix = \"\"):\n",
+    "    np.savetxt(\"{0}mtx.csv\".format(fileprefix),mtx,delimiter = \",\")\n",
+    "    np.savetxt(\"{0}dist.csv\".format(fileprefix),dist,delimiter = \",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#how to load camera intrinsics from a file:\n",
+    "def load_intrinsics(mtx_file,dist_file):\n",
+    "    mtx =  np.genfromtxt(\"lifecam_mtx.csv\",delimiter = \",\")\n",
+    "    dist = np.genfromtxt(\"lifecam_dist.csv\",delimiter = \",\")\n",
+    "    return mtx, dist\n",
+    "\n",
+    "mtx, dist = load_intrinsics(\"lifecam_mtx.csv\",\"lifecam_dist.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[591.17072233   0.         316.8070543 ]\n",
+      " [  0.         592.59267786 228.44569261]\n",
+      " [  0.           0.           1.        ]]\n",
+      "[[ 2.48518513e-02 -1.39885215e-02  4.70382762e-04 -8.68085658e-05\n",
+      "  -8.47889392e-02]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create calibration parameters and save to file:\n",
+    "ret, mtx, dist, rvecs, tvecs = cv.calibrateCamera(objpoints, imgpoints, gray.shape[::-1], None, None)\n",
+    "print(mtx)\n",
+    "print(dist)\n",
+    "save_intrinsics(mtx,dist,fileprefix = \"lifecam_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +391,7 @@
        "True"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,8 +404,6 @@
     "        img = cv.resize(img,(int(width/3),int(height/3)))\n",
     "h, w = img.shape[:2]\n",
     "newcameramtx, roi = cv.getOptimalNewCameraMatrix(mtx, dist, (w,h), 1, (w,h))\n",
-    "np.savetxt(\"lifecam_mtx.csv\",mtx,delimiter = \",\")\n",
-    "np.savetxt(\"lifecam_dist.csv\",dist,delimiter = \",\")\n",
     "\n",
     "# undistort\n",
     "undst = cv.undistort(img, mtx, dist, None, newcameramtx)\n",
@@ -375,37 +415,6 @@
     "cv.imwrite('/home/sage/Pictures/{0}/calibresult.jpg'.format(dir), undst)\n",
     "crop_orig = img[y:y+h, x:x+w]\n",
     "cv.imwrite('/home/sage/Pictures/{0}/test_cropped.jpg'.format(dir),crop_orig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#how to save camera intrinsics to file:\n",
-    "def save_intrinsics(mtx, dist, fileprefix = \"\"):\n",
-    "    np.savetxt(\"{0}mtx.csv\".format(fileprefix),mtx,delimiter = \",\")\n",
-    "    np.savetxt('{0}dist_shape.csv'.format(fileprefix),np.array(dist.shape),delimiter= \",\",fmt='%d')\n",
-    "    np.savetxt(\"{0}dist.csv\".format(fileprefix),dist.reshape(-1, dist.shape[-1]),delimiter = \",\")\n",
-    "\n",
-    "save_intrinsics(mtx,dist,fileprefix = \"lifecam_\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#how to load camera intrinsics from a file:\n",
-    "def load_intrinsics(mtx_file,dist_file,shape_file):\n",
-    "    mtx =  np.genfromtxt(\"lifecam_mtx.csv\",delimiter = \",\")\n",
-    "    dist_shape = np.genfromtxt(\"lifecam_dist_shape.csv\",delimiter = \",\",dtype=int)\n",
-    "    dist = np.genfromtxt(\"lifecam_dist.csv\",delimiter = \",\").reshape(dist_shape)\n",
-    "    return mtx, dist\n",
-    "\n",
-    "mtx, dist = load_intrinsics(\"lifecam_mtx.csv\",\"lifecam_dist.csv\",\"lifecam_dist_shape.csv\")"
    ]
   }
  ],
