clarified intrinsics values, edited manualCapture

--- a/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
+++ b/exp2_ws/src/waypoint_follower/src/openCV_test.ipynb
@@ -270,19 +270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/home/sage/Pictures/lifecam_calibrate/1_calibrate.jpg', '/home/sage/Pictures/lifecam_calibrate/3_calibrate.jpg', '/home/sage/Pictures/lifecam_calibrate/4_calibrate.jpg', '/home/sage/Pictures/lifecam_calibrate/2_calibrate.jpg', '/home/sage/Pictures/lifecam_calibrate/0_calibrate.jpg']\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n"
+      "['/home/sage/Pictures/lifecam_calibrate/1_calibrate.jpg', '/home/sage/Pictures/lifecam_calibrate/3_calibrate.jpg', '/home/sage/Pictures/lifecam_calibrate/4_calibrate.jpg', '/home/sage/Pictures/lifecam_calibrate/2_calibrate.jpg', '/home/sage/Pictures/lifecam_calibrate/0_calibrate.jpg']\n"
      ]
     }
    ],
@@ -316,7 +311,6 @@
     "    # Find the chess board corners\n",
     "    ret, corners = cv.findChessboardCorners(gray, (grid_w,grid_h), None)\n",
     "    # If found, add object points, image points (after refining them)\n",
-    "    print(ret)\n",
     "    if ret == True:\n",
     "        objpoints.append(objp)\n",
     "        corners2 = cv.cornerSubPix(gray,corners, (11,11), (-1,-1), criteria)\n",
@@ -347,17 +341,17 @@
    "outputs": [],
    "source": [
     "#how to load camera intrinsics from a file:\n",
-    "def load_intrinsics(mtx_file,dist_file):\n",
-    "    mtx =  np.genfromtxt(\"lifecam_mtx.csv\",delimiter = \",\")\n",
-    "    dist = np.genfromtxt(\"lifecam_dist.csv\",delimiter = \",\")\n",
+    "def load_intrinsics(dir,fileheader=\"lifecam\"):\n",
+    "    mtx =  np.genfromtxt(\"{0}{1}_mtx.csv\".format(dir,fileheader),delimiter = \",\")\n",
+    "    dist = np.genfromtxt(\"{0}{1}_dist.csv\".format(dir,fileheader),delimiter = \",\")\n",
     "    return mtx, dist\n",
     "\n",
-    "mtx, dist = load_intrinsics(\"lifecam_mtx.csv\",\"lifecam_dist.csv\")"
+    "# mtx, dist = load_intrinsics(\"lifecam_mtx.csv\",\"lifecam_dist.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -370,6 +364,17 @@
       "[[ 2.48518513e-02 -1.39885215e-02  4.70382762e-04 -8.68085658e-05\n",
       "  -8.47889392e-02]]\n"
      ]
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.7.0) :-1: error: (-5:Bad argument) in function 'calibrationMatrixValues'\n> Overload resolution failed:\n>  - calibrationMatrixValues() missing required argument 'apertureHeight' (pos 4)\n>  - calibrationMatrixValues() missing required argument 'apertureHeight' (pos 4)\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[206], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m img_size \u001b[39m=\u001b[39m (width, height)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Get the focal length, principal point, and aspect ratio\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m fx, fy, cx, cy, _, _ \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39;49mcalibrationMatrixValues(mtx, img_size, \u001b[39m0\u001b[39;49m)\n\u001b[1;32m     17\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mFocal length (in pixels):\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     18\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mfx = \u001b[39m\u001b[39m\"\u001b[39m, fx)\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.7.0) :-1: error: (-5:Bad argument) in function 'calibrationMatrixValues'\n> Overload resolution failed:\n>  - calibrationMatrixValues() missing required argument 'apertureHeight' (pos 4)\n>  - calibrationMatrixValues() missing required argument 'apertureHeight' (pos 4)\n"
+     ]
     }
    ],
    "source": [
@@ -377,7 +382,30 @@
     "ret, mtx, dist, rvecs, tvecs = cv.calibrateCamera(objpoints, imgpoints, gray.shape[::-1], None, None)\n",
     "print(mtx)\n",
     "print(dist)\n",
-    "save_intrinsics(mtx,dist,fileprefix = \"lifecam_\")"
+    "save_intrinsics(mtx,dist,fileprefix = \"lifecam_\")\n",
+    "\n",
+    "#matrix and distance values are of the type:\n",
+    "#camera_matrix = np.array([[fx, 0, cx], [0, fy, cy], [0, 0, 1]], dtype=np.float64)\n",
+    "#dist_coeffs = np.array([k1, k2, p1, p2, k3], dtype=np.float64)\n",
+    "\n",
+    "# Get the image size\n",
+    "img_size = (width, height)\n",
+    "\n",
+    "# Get the focal length, principal point, and aspect ratio\n",
+    "fx, fy, cx, cy, _, _ = cv.calibrationMatrixValues(mtx, img_size, 0)\n",
+    "\n",
+    "print(\"Focal length (in pixels):\")\n",
+    "print(\"fx = \", fx)\n",
+    "print(\"fy = \", fy)\n",
+    "\n",
+    "print(\"Principal point (in pixels):\")\n",
+    "print(\"cx = \", cx)\n",
+    "print(\"cy = \", cy)\n",
+    "\n",
+    "print(\"Image size (in pixels):\")\n",
+    "print(\"width = \", cap.get(cv.CAP_PROP_FRAME_WIDTH))\n",
+    "print(\"height = \", cap.get(cv.CAP_PROP_FRAME_HEIGHT))\n",
+    "print(\"frame rate = \", cap.get(cv.CAP_PROP_FPS))\n"
    ]
   },
   {
